# locography

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  main.py
app/api/: categories.py  items.py  locations.py  search.py
app/core/: __init__.py  config.py  database.py
app/schemas/: __init__.py  category.py  item.py  location.py
app/services/: image_service.py  llm_service.py  search_service.py
static/css/: style.css
static/js/: app.js
templates/: index.html
